@@ -1,0 +1,8 @@
+/* { dg-do compile } */
+
+type Foo =
+  struct
+  {
+    int i @
+          3; /* { dg-error "invalid struct field label\n.*expected offset" } */
+  };
